# gemm

./: CMakeLists.txt  gen.py
include/: gemm.h
src/: CMakeLists.txt  a.out  baseline.cu  gemm.cu  gemm_baseline.cpp  gemm_openblas.cpp  gemm_opt1.cpp  gemm_opt2.cpp  gemm_opt3.cpp  gemm_opt4.cpp  main.cpp  new_code.cpp  opt0.5.cu  opt0.cu  opt1.cu  opt2.cu  opt3.cu  opt4.cu  opt_1.5  ref.cpp
taichi/: origin.py
